# SimpleYunGameServer

./: .gitignore  .gitmodules  CMakeLists.txt  run_server.sh  run_tests.sh
assets/: YGSCanvas.html  test.txt  wget-log
qt/PGYGSQtFrontend/: PGYGSQtFrontend.pro  YGSWindow.cpp  YGSWindow.h  YGSWindow.ui  main.cpp
src/: Game.h  GameObject.h  GameObjectController.h  ObjectMgr.h  RenderOrder.h  Resource.h  Room.h  YGSContext.h  fwd.h  games.cpp  games.h  main.cpp  utils.h
src/GOs/: animation.cpp  gos.h
src/api/v1/: http_services.cpp  services.h  websocket_service.cpp
tests/: CMakeLists.txt  test_for_test.cpp
